<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cempakaweb.iakfinal.MainActivity"
    android:background="@drawable/materialdesign">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz_title"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:textSize="23dp"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_name"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/input_name"
            android:layout_width="250dp"
            android:layout_height="80dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_orange_dark"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:text="@string/question1"/>

            <RadioGroup
                android:id="@+id/answer_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/holo_orange_dark"
                android:layout_marginLeft="10dp">
                <RadioButton
                    android:id="@+id/answer_1a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:text="@string/answer_1a"/>
                <RadioButton
                    android:id="@+id/answer_1b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:text="@string/answer_1b"/>
                <RadioButton
                    android:id="@+id/answer_1c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:text="@string/answer_1c"/>
                <RadioButton
                    android:id="@+id/answer_1d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:checked="true"
                    android:text="@string/answer_1d"/>
            </RadioGroup>
            <TextView
                android:id="@+id/question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:background="@android:color/holo_orange_dark"
                android:layout_marginLeft="10dp"
                android:text="@string/question2"/>
            <RadioGroup
                android:id="@+id/answer_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_dark"
                android:layout_marginLeft="10dp">
                <RadioButton
                    android:id="@+id/answer_2a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:checked="true"
                    android:text="@string/answer_2a"/>
                <RadioButton
                    android:id="@+id/answer_2b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:text="@string/answer_2b"/>
                <RadioButton
                    android:id="@+id/answer_2c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:text="@string/answer_2c"/>
                <RadioButton
                    android:id="@+id/answer_2d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:text="@string/answer_2d"/>
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/botton_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/start_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:background="@color/button_submit"
                android:text="@string/start_btn"/>


        </LinearLayout>

    </LinearLayout>





</RelativeLayout>
