<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cempakaweb.iakfinal.ExplanationActivity"
    android:background="@drawable/expl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/expl_title"
                android:textStyle="bold"
                android:textColor="@android:color/white"

                android:textSize="35dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expl_title1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/amfibi"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/expl_desc1"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_centerHorizontal="true"
                android:background="@android:color/white"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/expl_title2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/everest"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/expl_desc2"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_centerHorizontal="true"
                android:background="@android:color/white"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/botton_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/back_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:background="@color/button_submit"
                android:text="@string/back_btn"/>


        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
